Kubernetes/Application/mongo-express-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  labels:
    app: mongo-express-service

spec:
  selector:
    app: mongo-express # write label name whom you want to connect
  type: LoadBalancer # assigns service an external ip address and so accepts external requests. Internal service or cluster Ip is default
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30000 # port for external Ip address. Port you need to put into browser. Range start from 30000 to 32767. we cannot give the same as above because it is not in the range
# this is bad habit to expose the port using external service. Make Ingress
# The difference between internal and external service is:
# no nodeport in internal service and Instead of loadbalancer default type is clusterip in internal service
