Kubernetes/Application/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb # to connect to pod through label. Write the pod label which you want to connect
  ports:
    - protocol: TCP
      port: 27017 # Service Port
      targetPort: 27017 # Container Port of deployment
